# rust-project-template

./: Cargo.toml  Makefile  README.md  README_TARGET.md  USAGE.md  cargo-generate.toml  pre-script.rhai
.github/workflows/: build.yml  template_values.toml
template/: .cz.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  book.toml  cargo-generate.toml  pre-script.rhai
template/.github/: PULL_REQUEST_TEMPLATE.md
template/.github/workflows/: audit.yml  book.yml  bumpversion.yml  cd.yml  ci.yml  release.yml
template/docs/: SUMMARY.md  code-of-conduct.md  quick-start.md
template/src/: main.rs
